--- a/src/html/events.html
+++ b/src/html/events.html
@@ -68,7 +68,7 @@
             </div>
           </div>
         </li>
-        <li class="events__item event  swiper-slide event--hidden">
+        <li class="events__item event swiper-slide">
           <img src="img/events/events-3.jpg" alt="Еврейский музей" class="event__img">
           <div class="event__about">
             <div class="event__spans">
@@ -90,7 +90,7 @@
             </div>
           </div>
         </li>
-        <li class="events__item event  swiper-slide event--hidden">
+        <li class="events__item event swiper-slide">
           <img src="img/events/events-4.jpg" alt="Третьяковка на Крымском валу" class="event__img">
           <div class="event__about">
             <div class="event__spans">
@@ -110,7 +110,7 @@
             </div>
           </div>
         </li>
-        <li class="events__item event swiper-slide event--hidden">
+        <li class="events__item event swiper-slide">
           <img src="img/events/events-5.jpg" alt="ММАМ" class="event__img">
           <div class="event__about">
             <div class="event__spans">
