--- a/src/html/header.html
+++ b/src/html/header.html
@@ -14,7 +14,7 @@
               <use xlink:href="img/sprite.svg#search"></use>
             </svg>
           </button>
-            <input type="text" class="search__input input" id="search-mobile" placeholder="Поиск по сайту">
+          <input type="text" class="search__input input" id="search-mobile" placeholder="Поиск по сайту">
         </label>
       </div>
       <nav class="nav header-top__nav">
@@ -47,8 +47,30 @@
               <use xlink:href="img/sprite.svg#arrow"></use>
             </svg>
           </div>
-          <div class="header-select__dropdown" id="scrollbar">
+          <div class="header-select__dropdown">
+            <div class="header-select__realism header-select header-select__subselect"
+                 data-subselect="Передвижничество">
+              <div class="header-select__dropdown">
+                <ul class="header-select__list">
+                  <li class="header-select__item">Репин</li>
+                  <li class="header-select__item">Суриков</li>
+                  <li class="header-select__item">Мясоедов</li>
+                  <li class="header-select__item">Дубовской</li>
+                  <li class="header-select__item">Саврасов</li>
+                  <li class="header-select__item">Шишкин</li>
+                </ul>
+              </div>
+            </div>
             <ul class="header-select__list">
+              <li class="header-select__item header-select__item--subselect">
+                <div class="header-select__top" tabindex="0" role="combobox" aria-label="передвижничество"
+                     aria-expanded="false">
+                  Передвижничество
+                  <svg>
+                    <use xlink:href="img/sprite.svg#arrow"></use>
+                  </svg>
+                </div>
+              </li>
               <li class="header-select__item">Авилов</li>
               <li class="header-select__item">Баженов</li>
               <li class="header-select__item">Вайреда</li>
@@ -58,7 +80,6 @@
             </ul>
           </div>
         </div>
-
         <div class="header-select__impressionism header-select">
           <div class="header-select__top" role="combobox" tabindex="0" aria-label="импрессионизм" aria-expanded="false">
             Импрессионизм
@@ -137,7 +158,7 @@
       </div>
       <div class="header-bottom__search search">
         <label for="search">
-          <button class="btn-reset search__btn" type="submit">
+          <button class="btn-reset search__btn" type="submit" aria-label="поиск по сайту">
             <svg>
               <use xlink:href="img/sprite.svg#search"></use>
             </svg>
