--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -3,7 +3,7 @@
   </div>
   <div class="container hero__container">
     <h1 class="visually-hidden">Blanchard - художественная галерея</h1>
-    <p class="hero__title">Прикоснитесь к прекрасному</p>
+    <h2 class="hero__title">Прикоснитесь к прекрасному</h2>
     <p class="hero__text">Мы вынуждены отталкиваться от того, что реализация намеченных плановых заданий создаёт
       предпосылки для новых предложений.</p>
     <a href="#contacts" class=" btn hero__btn" role="button">Подписаться на рассылку</a>
