--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -5,27 +5,30 @@
       Предварительные выводы: постоянное информационно-пропагандистское обеспечение нашей деятельности однозначно
       фиксирует необходимость своевременного выполнения сверхзадачи. А ещё независимые государства смешаны с не
       уникальными данными до степени совершенной неузнаваемости, из-за чего возрастает их статус бесполезности. Прежде
-      всего, постоянное информационно-пропагандистское <span class="projects__tooltip"
-                                                             data-tooltip="Пример современных тенденций - современная методология разработки">
-      <svg>
-        <use xlink:href="img/sprite.svg#i"></use>
-      </svg>
-    </span> обеспечение нашей деятельности однозначно фиксирует необходимость
-      экономической целесообразности принимаемых решений. И нет сомнений, что действия представителей оппозиции могут
-      быть рассмотрены <span class="projects__tooltip"
-                             data-tooltip="Приятно, граждане, наблюдать, как сделанные на базе аналитики выводы вызывают у вас эмоции"><svg>
-        <use xlink:href="img/sprite.svg#i"></use>
-      </svg></span> исключительно в разрезе маркетинговых и финансовых <span class="projects__tooltip"
-                                                                             data-tooltip="В стремлении повысить качество "><svg>
-        <use xlink:href="img/sprite.svg#i"></use>
-      </svg></span> предпосылок. Банальные, но неопровержимые выводы, а также представители современных социальных
+      всего, постоянное информационно-пропагандистское
+        <span tabindex="0" class="projects__tooltip"
+              data-tooltip="Пример современных тенденций - современная методология разработки">
+          <svg><use xlink:href="img/sprite.svg#i"></use></svg>
+        </span>
+      обеспечение нашей деятельности однозначно фиксирует необходимость экономической целесообразности принимаемых решений.
+      И нет сомнений, что действия представителей оппозиции могут быть рассмотрены
+        <span tabindex="0" class="projects__tooltip"
+              data-tooltip="Приятно, граждане, наблюдать, как сделанные на базе аналитики выводы вызывают у вас эмоции">
+          <svg><use xlink:href="img/sprite.svg#i"></use></svg>
+        </span>
+      исключительно в разрезе маркетинговых и финансовых
+        <span tabindex="0" class="projects__tooltip"
+              data-tooltip="В стремлении повысить качество">
+          <svg><use xlink:href="img/sprite.svg#i"></use></svg>
+        </span>
+      предпосылок. Банальные, но неопровержимые выводы, а также представители современных социальных
       резервов призывают нас к новым свершениям, которые, в свою
-      очередь, должны быть смешаны с не уникальными данными до степени совершенной неузнаваемости. Подробнее:
-      <a href="https://blanchard-art.ru/projects/about" target="_blank" class="projects__link link">blanchard-art.ru/projects/about</a>
+      очередь, должны быть смешаны с не уникальными данными до степени совершенной неузнаваемости.
+      Подробнее: <a href="https://blanchard-art.ru/projects/about" target="_blank"
+                   class="projects__link link">blanchard-art.ru/projects/about</a>
     </p>
     <h3 class="projects__subtitle subtitle">Партнёры проектов:</h3>
     <div class="projects__bottom">
-
       <div class="projects__slider projects-slider">
         <div class="pagination-block__button-prev swiper-button-prev projects-slider__prev-btn"></div>
         <div class="pagination-block__button-next swiper-button-next projects-slider__next-btn"></div>
