corrected search input in the header, changes in dropdowns in the header, changed slides in the project block

--- a/src/html/catalog.html
+++ b/src/html/catalog.html
@@ -5,19 +5,19 @@
       <div class="catalog-top__flags flags">
         <ul class="flags__list">
           <li class="flags__item" data-flag="france" tabindex="0">
-            <a aria-label="Франция" class="flags__link flags__link--france"></a>
+            <span aria-label="Франция" class="flags__link flags__link--france"></span>
           </li>
           <li class="flags__item" data-flag="germany" tabindex="0">
-            <a aria-label="Германия" class="flags__link flags__link--germany"></a>
+            <span aria-label="Германия" class="flags__link flags__link--germany"></span>
           </li>
           <li class="flags__item flags__item--active" data-flag="italy" tabindex="0">
-            <a aria-label="Италия" class="flags__link flags__link--italy"></a>
+            <span aria-label="Италия" class="flags__link flags__link--italy"></span>
           </li>
           <li class="flags__item" data-flag="russia" tabindex="0">
-            <a aria-label="Россия" class="flags__link flags__link--russia"></a>
+            <span aria-label="Россия" class="flags__link flags__link--russia"></span>
           </li>
           <li class="flags__item" data-flag="belgium" tabindex="0">
-            <a aria-label="Бельгия" class="flags__link flags__link--belgium"></a>
+            <span aria-label="Бельгия" class="flags__link flags__link--belgium"></span>
           </li>
         </ul>
       </div>
@@ -32,7 +32,7 @@
 
       <div class="catalog-bottom__left">
         <div class="painter painter--active">
-          <img src="img/catalog/domenico.jpg" alt="фото Доменико Гирландайо" class="painter__img">
+          <img src="img/catalog/domenico.jpg" alt="фото Доменико Гирландайо" class="painter__img" loading="lazy" width="750" height="470">
           <p class="painter__name subtitle">Доменико Гирландайо</p>
           <span class="painter__years descr">2 июня 1448 — 11 января 1494.</span>
           <p class="text painter__text">Один из ведущих флорентийских художников Кватроченто,
@@ -43,7 +43,7 @@
             граждане Флоренции в костюмах того времени).</p>
         </div>
         <div class="painter">
-          <img src="img/catalog/benedetto.jpg" alt="Бенедетто ди Биндо" class="painter__img">
+          <img src="img/catalog/benedetto.jpg" alt="Бенедетто ди Биндо" class="painter__img" loading="lazy" width="941" height="750">
           <p class="painter__name subtitle">Бенедетто ди Биндо</p>
           <span class="painter__years descr">ок. 1380—85 — 19 сентября 1417.</span>
           <p class="text painter__text">Бенедетто ди Биндо остался в истории искусства как сиенский художник, так
@@ -55,7 +55,7 @@
             произведения Джованни да Милано.</p>
         </div>
         <div class="painter">
-          <img src="img/catalog/bergonione.jpg" alt="Доменико Гирландайо" class="painter__img">
+          <img src="img/catalog/bergonione.jpg" alt="Бергоньоне, Амброджо" class="painter__img" loading="lazy" width="750" height="750">
           <p class="painter__name subtitle">Бергоньоне, Амброджо</p>
           <span class="painter__years descr">1453 — 1523.</span>
           <p class="text painter__text">Прозвище говорит о его тяготении к бургундской школе, по манере ему близок
@@ -68,7 +68,7 @@
 
         </div>
         <div class="painter">
-          <img src="img/catalog/bissolo.jpg" alt="Биссоло, Франческо" class="painter__img">
+          <img src="img/catalog/bissolo.jpg" alt="Биссоло, Франческо" class="painter__img" loading="lazy" width="388" height="599">
           <p class="painter__name subtitle">Биссоло, Франческо</p>
           <span class="painter__years descr">1470 или 1472 — 20 апреля 1554.</span>
           <p class="text painter__text">Сын художника. Ученик Джованни Беллини. С 1490 переехал в мастерскую Беллини. С
@@ -82,7 +82,7 @@
             County Museum of Art), Дэйтоновском институте искусств (штат Огайо, США) и др.</p>
         </div>
         <div class="painter">
-          <img src="img/catalog/painter.jpg" alt="Художник" class="painter__img">
+          <img src="img/catalog/painter.jpg" alt="Художник" class="painter__img" loading="lazy" width="800" height="600">
           <p class="painter__name subtitle">Имя художника</p>
           <span class="painter__years descr">годы жизни</span>
           <p class="text painter__text">Один из ведущих мировых художников. Автор известных шедевров</p>
