--- a/src/html/contacts.html
+++ b/src/html/contacts.html
@@ -27,9 +27,9 @@
           <p class="subtitle contacts-left__social-title">Связаться в один клик</p>
           <div class="contacts-left__social">
             <a href="https://wa.me/79187460255" target="_blank"
-               class="contacts-left__social-btn contacts-left__social-btn--whatsapp" aria-label="whatsapp"></a>
+               class="contacts-left__social-btn contacts-left__social-btn--whatsapp" aria-label="whatsapp" rel="noopener noreferrer"></a>
             <a href="https://t.me/andreitru" target="_blank"
-               class="contacts-left__social-btn contacts-left__social-btn--telegram" aria-label="telegram"></a>
+               class="contacts-left__social-btn contacts-left__social-btn--telegram" aria-label="telegram" rel="noopener noreferrer"></a>
           </div>
         </div>
 
