--- a/src/html/editions.html
+++ b/src/html/editions.html
@@ -14,84 +14,84 @@
               <input type="checkbox" class="custom-checkbox__input visually-hidden" tabindex="-1">
               <span class="custom-checkbox__text" tabindex="0">Бестселлеры</span>
             </label>
-            <button class="btn-reset custom-checkbox__btn"></button>
+            <button class="btn-reset custom-checkbox__btn" aria-label="убрать категорию"></button>
           </li>
           <li class="categories__item">
             <label data-text="Искусство" class="custom-checkbox">
               <input type="checkbox" class="custom-checkbox__input visually-hidden" tabindex="-1">
               <span class="custom-checkbox__text" tabindex="0">Искусство</span>
             </label>
-            <button class="btn-reset custom-checkbox__btn"></button>
+            <button class="btn-reset custom-checkbox__btn" aria-label="убрать категорию"></button>
           </li>
           <li class="categories__item">
             <label data-text="Архитектура" class="custom-checkbox">
               <input type="checkbox" class="custom-checkbox__input visually-hidden" tabindex="-1">
               <span class="custom-checkbox__text" tabindex="0">Архитектура</span>
             </label>
-            <button class="btn-reset custom-checkbox__btn"></button>
+            <button class="btn-reset custom-checkbox__btn" aria-label="убрать категорию"></button>
           </li>
           <li class="categories__item checked">
             <label data-text="Дизайн" class="custom-checkbox">
               <input checked type="checkbox" class="custom-checkbox__input visually-hidden" tabindex="-1">
               <span class="custom-checkbox__text" tabindex="0">Дизайн</span>
             </label>
-            <button class="btn-reset custom-checkbox__btn"></button>
+            <button class="btn-reset custom-checkbox__btn" aria-label="убрать категорию"></button>
           </li>
           <li class="categories__item">
             <label data-text="Мода" class="custom-checkbox">
               <input type="checkbox" class="custom-checkbox__input visually-hidden" tabindex="-1">
               <span class="custom-checkbox__text" tabindex="0">Мода</span>
             </label>
-            <button class="btn-reset custom-checkbox__btn"></button>
+            <button class="btn-reset custom-checkbox__btn" aria-label="убрать категорию"></button>
           </li>
           <li class="categories__item">
             <label data-text="Детям" class="custom-checkbox">
               <input type="checkbox" class="custom-checkbox__input visually-hidden" tabindex="-1">
               <span class="custom-checkbox__text" tabindex="0">Детям</span>
             </label>
-            <button class="btn-reset custom-checkbox__btn"></button>
+            <button class="btn-reset custom-checkbox__btn" aria-label="убрать категорию"></button>
           </li>
           <li class="categories__item">
             <label data-text="Художественная литература" class="custom-checkbox">
               <input type="checkbox" class="custom-checkbox__input visually-hidden" tabindex="-1">
               <span class="custom-checkbox__text" tabindex="0">Художественная литература</span>
             </label>
-            <button class="btn-reset custom-checkbox__btn"></button>
+            <button class="btn-reset custom-checkbox__btn" aria-label="убрать категорию"></button>
           </li>
           <li class="categories__item">
             <label data-text="Публицистика" class="custom-checkbox">
               <input type="checkbox" class="custom-checkbox__input visually-hidden" tabindex="-1">
               <span class="custom-checkbox__text" tabindex="0">Публицистика</span>
             </label>
-            <button class="btn-reset custom-checkbox__btn"></button>
+            <button class="btn-reset custom-checkbox__btn" aria-label="убрать категорию"></button>
           </li>
           <li class="categories__item">
             <label data-text="Путеводителя" class="custom-checkbox">
               <input type="checkbox" class="custom-checkbox__input visually-hidden" tabindex="-1">
               <span class="custom-checkbox__text" tabindex="0">Путеводители</span>
             </label>
-            <button class="btn-reset custom-checkbox__btn"></button>
+            <button class="btn-reset custom-checkbox__btn" aria-label="убрать категорию"></button>
           </li>
           <li class="categories__item">
             <label data-text="Философия" class="custom-checkbox">
               <input type="checkbox" class="custom-checkbox__input visually-hidden" tabindex="-1">
               <span class="custom-checkbox__text" tabindex="0">Философия</span>
             </label>
-            <button class="btn-reset custom-checkbox__btn"></button>
+            <button class="btn-reset custom-checkbox__btn" aria-label="убрать категорию"></button>
           </li>
           <li class="categories__item">
             <label data-text="Учебная литература" class="custom-checkbox">
               <input type="checkbox" class="custom-checkbox__input visually-hidden" tabindex="-1">
               <span class="custom-checkbox__text" tabindex="0">Учебная литература</span>
             </label>
-            <button class="btn-reset custom-checkbox__btn"></button>
+            <button class="btn-reset custom-checkbox__btn" aria-label="убрать категорию"></button>
           </li>
           <li class="categories__item">
             <label data-text="Журналы и газеты" class="custom-checkbox">
               <input type="checkbox" class="custom-checkbox__input visually-hidden" tabindex="-1">
               <span class="custom-checkbox__text" tabindex="0">Журналы и газеты</span>
             </label>
-            <button class="btn-reset custom-checkbox__btn"></button>
+            <button class="btn-reset custom-checkbox__btn" aria-label="убрать категорию"></button>
           </li>
         </ul>
         <div class="editions-left__price price">
@@ -119,7 +119,7 @@
         </div>
         <div class="swiper-wrapper editions-slider__wrapper">
           <div class="swiper-slide editions-slider__slide">
-            <img src="img/editions/editions-1.jpg" alt="1" class="editions-slider__img">
+            <img src="img/editions/editions-1.jpg" alt="1" class="editions-slider__img" loading="lazy" width="350" height="390">
             <div class="editions-slider__content">
               <div class="editions-slider__text-block">
                 <p class="editions-slider__name">Искусство цвета</p>
@@ -130,7 +130,7 @@
             <button class="btn-reset btn editions-slider__btn"><span>Заказать</span></button>
           </div>
           <div class="swiper-slide editions-slider__slide">
-            <img src="img/editions/editions-2.jpg" alt="2" class="editions-slider__img">
+            <img src="img/editions/editions-2.jpg" alt="2" class="editions-slider__img" loading="lazy" width="350" height="390">
             <div class="editions-slider__content">
               <div class="editions-slider__text-block">
                 <p class="editions-slider__name">Типографика</p>
@@ -141,7 +141,7 @@
             <button class="btn-reset btn editions-slider__btn"><span>Заказать</span></button>
           </div>
           <div class="swiper-slide editions-slider__slide">
-            <img src="img/editions/editions-3.jpg" alt="3" class="editions-slider__img">
+            <img src="img/editions/editions-3.jpg" alt="3" class="editions-slider__img" loading="lazy" width="350" height="390">
             <div class="editions-slider__content">
               <div class="editions-slider__text-block">
                 <p class="editions-slider__name">Книга про буквы</p>
@@ -152,7 +152,7 @@
             <button class="btn-reset btn editions-slider__btn"><span>Заказать</span></button>
           </div>
           <div class="swiper-slide editions-slider__slide">
-            <img src="img/editions/editions-4.jpg" alt="4" class="editions-slider__img">
+            <img src="img/editions/editions-4.jpg" alt="4" class="editions-slider__img" loading="lazy" width="350" height="390">
             <div class="editions-slider__content">
               <div class="editions-slider__text-block">
                 <p class="editions-slider__name">Николай Ильин</p>
@@ -163,7 +163,7 @@
             <button class="btn-reset btn editions-slider__btn"><span>Заказать</span></button>
           </div>
           <div class="swiper-slide editions-slider__slide">
-            <img src="img/editions/editions-5.jpg" alt="5" class="editions-slider__img">
+            <img src="img/editions/editions-5.jpg" alt="5" class="editions-slider__img" loading="lazy" width="350" height="390">
             <div class="editions-slider__content">
               <div class="editions-slider__text-block">
                 <p class="editions-slider__name">Модульные сетки в графическом дизайне</p>
@@ -174,7 +174,7 @@
             <button class="btn-reset btn editions-slider__btn"><span>Заказать</span></button>
           </div>
           <div class="swiper-slide editions-slider__slide">
-            <img src="img/editions/editions-6.jpg" alt="6" class="editions-slider__img">
+            <img src="img/editions/editions-6.jpg" alt="6" class="editions-slider__img" loading="lazy" width="350" height="390">
             <div class="editions-slider__content">
               <div class="editions-slider__text-block">
                 <p class="editions-slider__name">Эволюция графических стилей</p>
@@ -185,7 +185,7 @@
             <button class="btn-reset btn editions-slider__btn"><span>Заказать</span></button>
           </div>
           <div class="swiper-slide editions-slider__slide">
-            <img src="img/editions/editions-7.jpg" alt="7" class="editions-slider__img">
+            <img src="img/editions/editions-7.jpg" alt="7" class="editions-slider__img" loading="lazy" width="350" height="390">
             <div class="editions-slider__content">
               <div class="editions-slider__text-block">
                 <p class="editions-slider__name">Искусство и визуальное восприятие</p>
