--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -5,11 +5,11 @@
     </a>
     <div class="footer__social footer-social">
       <a href="https://vk.com" class="footer-social__link footer-social__link--vk" target="_blank"
-         aria-label="вконтакте"></a>
+         aria-label="вконтакте" rel="noopener noreferrer"></a>
       <a href="https://instagram.com" class="footer-social__link footer-social__link--instagram" target="_blank"
-         aria-label="instagram"></a>
+         aria-label="instagram" rel="noopener noreferrer"></a>
       <a href="https://fb.com" class="footer-social__link footer-social__link--fb" target="_blank"
-         aria-label="facebook"></a>
+         aria-label="facebook" rel="noopener noreferrer"></a>
     </div>
   </div>
 </footer>
