--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -25,7 +25,7 @@
       резервов призывают нас к новым свершениям, которые, в свою
       очередь, должны быть смешаны с не уникальными данными до степени совершенной неузнаваемости.
       Подробнее: <a href="https://blanchard-art.ru/projects/about" target="_blank"
-                   class="projects__link link">blanchard-art.ru/projects/about</a>
+                   class="projects__link link" rel="noopener noreferrer">blanchard-art.ru/projects/about</a>
     </p>
     <h3 class="projects__subtitle subtitle">Партнёры проектов:</h3>
     <div class="projects__bottom">
