--- a/src/html/events.html
+++ b/src/html/events.html
@@ -4,7 +4,7 @@
     <div class="swiper-container events-slider">
       <ul class="events__list swiper-wrapper events-slider__wrapper">
         <li class="events__item event swiper-slide">
-          <img src="img/events/events-1.jpg" alt="Музей им. Щусева" class="event__img">
+          <img src="img/events/events-1.jpg" alt="Музей им. Щусева" class="event__img" loading="lazy" width="500" height="300">
           <div class="event__about">
             <div class="event__spans">
               <span class="event__place descr">Музей им. Щусева</span>
@@ -26,7 +26,7 @@
           </div>
         </li>
         <li class="events__item event swiper-slide">
-          <img src="img/events/events-2.jpg" alt="ММОМА" class="event__img">
+          <img src="img/events/events-2.jpg" alt="ММОМА" class="event__img" loading="lazy" width="500" height="300">
           <div class="event__about">
             <div class="event__spans">
               <span class="event__place descr">ММОМА</span>
@@ -47,7 +47,7 @@
           </div>
         </li>
         <li class="events__item event  swiper-slide">
-          <img src="img/events/events-3.jpg" alt="Еврейский музей" class="event__img">
+          <img src="img/events/events-3.jpg" alt="Еврейский музей" class="event__img" loading="lazy" width="500" height="300">
           <div class="event__about">
             <div class="event__spans">
               <span class="event__place descr">Еврейский музей</span>
@@ -69,7 +69,7 @@
           </div>
         </li>
         <li class="events__item event swiper-slide">
-          <img src="img/events/events-3.jpg" alt="Еврейский музей" class="event__img">
+          <img src="img/events/events-3.jpg" alt="Еврейский музей" class="event__img" loading="lazy" width="500" height="300">
           <div class="event__about">
             <div class="event__spans">
               <span class="event__place descr">Еврейский музей</span>
@@ -91,7 +91,7 @@
           </div>
         </li>
         <li class="events__item event swiper-slide">
-          <img src="img/events/events-4.jpg" alt="Третьяковка на Крымском валу" class="event__img">
+          <img src="img/events/events-4.jpg" alt="Третьяковка на Крымском валу" class="event__img" loading="lazy" width="500" height="300">
           <div class="event__about">
             <div class="event__spans">
               <span class="event__place descr">Третьяковка на Крымском валу</span>
@@ -111,7 +111,7 @@
           </div>
         </li>
         <li class="events__item event swiper-slide">
-          <img src="img/events/events-5.jpg" alt="ММАМ" class="event__img">
+          <img src="img/events/events-5.jpg" alt="ММАМ" class="event__img" loading="lazy" width="500" height="300">
           <div class="event__about">
             <div class="event__spans">
               <span class="event__place descr">ММАМ</span>
