--- a/src/html/gallery.html
+++ b/src/html/gallery.html
@@ -35,92 +35,92 @@
         <div class="swiper-wrapper gallery-slider__wrapper">
           <div class="gallery-slider__slide swiper-slide">
             <div tabindex="0">
-              <img src="img/gallery/gallery-1.jpeg" alt="Картина 1">
+              <img src="img/gallery/gallery-1.jpeg" alt="Картина 1" loading="lazy" width="350" height="470">
             </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
             <div tabindex="0">
-              <img src="img/gallery/gallery-2.jpeg" alt="Картина 2">
+              <img src="img/gallery/gallery-2.jpeg" alt="Картина 2" loading="lazy" width="350" height="442">
             </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
             <div tabindex="0">
-              <img src="img/gallery/gallery-3.jpeg" alt="Картина 3">
+              <img src="img/gallery/gallery-3.jpeg" alt="Картина 3" loading="lazy" width="350" height="428">
             </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
             <div tabindex="0">
-              <img src="img/gallery/gallery-4.jpeg" alt="Картина 4">
+              <img src="img/gallery/gallery-4.jpeg" alt="Картина 4" loading="lazy" width="352" height="367">
             </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
             <div tabindex="0">
-              <img src="img/gallery/gallery-5.jpeg" alt="Картина 5">
+              <img src="img/gallery/gallery-5.jpeg" alt="Картина 5" loading="lazy" width="374" height="367">
             </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
             <div tabindex="0">
-              <img src="img/gallery/gallery-6.jpeg" alt="Картина 6">
+              <img src="img/gallery/gallery-6.jpeg" alt="Картина 6" loading="lazy" width="367" height="367">
             </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
             <div tabindex="0">
-              <img src="img/gallery/gallery-7.jpeg" alt="Картина 7">
+              <img src="img/gallery/gallery-7.jpeg" alt="Картина 7" loading="lazy" width="350" height="571">
             </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
             <div tabindex="0">
-              <img src="img/gallery/gallery-8.jpeg" alt="Картина 8">
+              <img src="img/gallery/gallery-8.jpeg" alt="Картина 8" loading="lazy" width="350" height="593">
             </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
             <div tabindex="0">
-              <img src="img/gallery/gallery-9.jpeg" alt="Картина 9">
+              <img src="img/gallery/gallery-9.jpeg" alt="Картина 9" loading="lazy" width="485" height="367">
             </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
             <div tabindex="0">
-              <img src="img/gallery/gallery-10.jpeg" alt="Картина 10">
+              <img src="img/gallery/gallery-10.jpeg" alt="Картина 10" loading="lazy" width="367" height="367">
             </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
             <div tabindex="0">
-              <img src="img/gallery/gallery-11.jpeg" alt="Картина 11">
+              <img src="img/gallery/gallery-11.jpeg" alt="Картина 11" loading="lazy" width="365" height="367">
             </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
             <div tabindex="0">
-              <img src="img/gallery/gallery-12.jpeg" alt="Картина 12">
+              <img src="img/gallery/gallery-12.jpeg" alt="Картина 12" loading="lazy" width="431" height="367">
             </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
             <div tabindex="0">
-              <img src="img/gallery/gallery-13.jpeg" alt="Картина 13">
+              <img src="img/gallery/gallery-13.jpeg" alt="Картина 13" loading="lazy" width="350" height="427">
             </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
             <div tabindex="0">
-              <img src="img/gallery/gallery-14.jpeg" alt="Картина 14">
+              <img src="img/gallery/gallery-14.jpeg" alt="Картина 14" loading="lazy" width="366" height="367">
             </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
             <div tabindex="0">
-              <img src="img/gallery/gallery-15.jpeg" alt="Картина 15">
+              <img src="img/gallery/gallery-15.jpeg" alt="Картина 15" loading="lazy" width="350" height="428">
             </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
             <div tabindex="0">
-              <img src="img/gallery/gallery-16.jpeg" alt="Картина 16">
+              <img src="img/gallery/gallery-16.jpeg" alt="Картина 16" loading="lazy" width="412" height="367">
             </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
             <div tabindex="0">
-              <img src="img/gallery/gallery-17.jpeg" alt="Картина 17">
+              <img src="img/gallery/gallery-17.jpeg" alt="Картина 17" loading="lazy" width="459" height="367">
             </div>
           </div>
           <div class="gallery-slider__slide swiper-slide">
             <div tabindex="0">
-              <img src="img/gallery/gallery-18.jpeg" alt="Картина 18">
+              <img src="img/gallery/gallery-18.jpeg" alt="Картина 18" loading="lazy" width="350" height="470">
             </div>
           </div>
         </div>
