The Contacts section has been redesigned - the container has been removed. Correction of the block Search in the header

--- a/app/index.html
+++ b/app/index.html
@@ -1691,40 +1691,38 @@
     <h2 class="contacts__title title">Контакты</h2>
   </div>
   <div class="contacts__container">
-    <div class="container">
-      <div class="contacts__wrapper">
-        <div class="contacts__left contacts-left">
-          <p class="contacts-left__address-title subtitle">Шоурум №4</p>
-          <address class="contacts-left__address text">Леонтьевский переулок, дом 5, строение 1</address>
-          <p class="contacts-left__back-call subtitle">Заказать обратный звонок</p>
-          <form action="#" class="js-form contacts-left__form">
-            <div class="just-validate-tooltip-container">
-              <label for="name">
-                <input type="text" id="name" name="name" placeholder="Имя*" required data-validate-field="name"
-                       class="form__input form-control">
-              </label>
-            </div>
-            <div class="just-validate-tooltip-container">
-              <label for="phone">
-                <input type="tel" data-validate-field="phone" data-validate-rules="phone" name="phone" id="phone"
-                       placeholder="Телефон*" required class="form__input form-control">
-              </label>
-            </div>
-            <button type="submit" class="btn-reset contacts-left__btn btn"><span>Заказать</span></button>
-          </form>
-          <p class="subtitle contacts-left__social-title">Связаться в один клик</p>
-          <div class="contacts-left__social">
-            <a href="https://wa.me/79187460255" target="_blank"
-               class="contacts-left__social-btn contacts-left__social-btn--whatsapp" aria-label="whatsapp" rel="noopener noreferrer"></a>
-            <a href="https://t.me/andreitru" target="_blank"
-               class="contacts-left__social-btn contacts-left__social-btn--telegram" aria-label="telegram" rel="noopener noreferrer"></a>
-          </div>
+    <div class="contacts__left contacts-left">
+      <h3 class="contacts-left__address-title subtitle">Шоурум №4</h3>
+      <address class="contacts-left__address text">Леонтьевский переулок, дом 5, строение 1</address>
+      <h3 class="contacts-left__back-call subtitle">Заказать обратный звонок</h3>
+      <form action="#" class="js-form contacts-left__form">
+        <div class="just-validate-tooltip-container">
+          <label for="name">
+            <input type="text" id="name" name="name" placeholder="Имя*" required data-validate-field="name"
+                   class="form__input form-control">
+          </label>
         </div>
-
-        <div class="contacts__right contacts-right">
-          <div class="contacts-right__map" id="map"></div>
+        <div class="just-validate-tooltip-container">
+          <label for="phone">
+            <input type="tel" data-validate-field="phone" data-validate-rules="phone" name="phone" id="phone"
+                   placeholder="Телефон*" required class="form__input form-control">
+          </label>
         </div>
+        <button type="submit" class="btn-reset contacts-left__btn btn"><span>Заказать</span></button>
+      </form>
+      <h3 class="subtitle contacts-left__social-title">Связаться в один клик</h3>
+      <div class="contacts-left__social">
+        <a href="https://wa.me/79187460255" target="_blank"
+           class="contacts-left__social-btn contacts-left__social-btn--whatsapp" aria-label="whatsapp"
+           rel="noopener noreferrer"></a>
+        <a href="https://t.me/andreitru" target="_blank"
+           class="contacts-left__social-btn contacts-left__social-btn--telegram" aria-label="telegram"
+           rel="noopener noreferrer"></a>
       </div>
+    </div>
+
+    <div class="contacts__right contacts-right">
+      <div class="contacts-right__map" id="map"></div>
     </div>
   </div>
 </section>
