validator - corrected search blocks in the header, <a> instead of <span> in the Catalog

--- a/src/html/catalog.html
+++ b/src/html/catalog.html
@@ -5,19 +5,19 @@
       <div class="catalog-top__flags flags">
         <ul class="flags__list">
           <li class="flags__item" data-flag="france" tabindex="0">
-            <span aria-label="Франция" class="flags__link flags__link--france"></span>
+            <a aria-label="Франция" class="flags__link flags__link--france"></a>
           </li>
           <li class="flags__item" data-flag="germany" tabindex="0">
-            <span aria-label="Германия" class="flags__link flags__link--germany"></span>
+            <a aria-label="Германия" class="flags__link flags__link--germany"></a>
           </li>
           <li class="flags__item flags__item--active" data-flag="italy" tabindex="0">
-            <span aria-label="Италия" class="flags__link flags__link--italy"></span>
+            <a aria-label="Италия" class="flags__link flags__link--italy"></a>
           </li>
           <li class="flags__item" data-flag="russia" tabindex="0">
-            <span aria-label="Россия" class="flags__link flags__link--russia"></span>
+            <a aria-label="Россия" class="flags__link flags__link--russia"></a>
           </li>
           <li class="flags__item" data-flag="belgium" tabindex="0">
-            <span aria-label="Бельгия" class="flags__link flags__link--belgium"></span>
+            <a aria-label="Бельгия" class="flags__link flags__link--belgium"></a>
           </li>
         </ul>
       </div>
