--- a/app/index.html
+++ b/app/index.html
@@ -24,12 +24,12 @@
         <img src="img/logo.png" alt="Логотип Blanchard">
       </a>
       <div class="search search--mobile">
+        <button class="btn-reset search__btn search__btn--mobile" type="submit" aria-label="поиск по сайту">
+          <svg>
+            <use xlink:href="img/sprite.svg#search"></use>
+          </svg>
+        </button>
         <label for="search-mobile">
-          <button class="btn-reset search__btn search__btn--mobile" type="submit" aria-label="поиск по сайту">
-            <svg>
-              <use xlink:href="img/sprite.svg#search"></use>
-            </svg>
-          </button>
           <input type="text" class="search__input input" id="search-mobile" placeholder="Поиск по сайту">
         </label>
       </div>
@@ -147,12 +147,12 @@
         </div>
       </div>
       <div class="header-bottom__search search">
+        <button class="btn-reset search__btn" type="submit" aria-label="поиск по сайту">
+          <svg>
+            <use xlink:href="img/sprite.svg#search"></use>
+          </svg>
+        </button>
         <label for="search">
-          <button class="btn-reset search__btn" type="submit" aria-label="поиск по сайту">
-            <svg>
-              <use xlink:href="img/sprite.svg#search"></use>
-            </svg>
-          </button>
           <input type="search" id="search" class="search__input input" placeholder="Поиск по сайту">
         </label>
       </div>
@@ -325,19 +325,19 @@
       <div class="catalog-top__flags flags">
         <ul class="flags__list">
           <li class="flags__item" data-flag="france" tabindex="0">
-            <span aria-label="Франция" class="flags__link flags__link--france"></span>
+            <a aria-label="Франция" class="flags__link flags__link--france"></a>
           </li>
           <li class="flags__item" data-flag="germany" tabindex="0">
-            <span aria-label="Германия" class="flags__link flags__link--germany"></span>
+            <a aria-label="Германия" class="flags__link flags__link--germany"></a>
           </li>
           <li class="flags__item flags__item--active" data-flag="italy" tabindex="0">
-            <span aria-label="Италия" class="flags__link flags__link--italy"></span>
+            <a aria-label="Италия" class="flags__link flags__link--italy"></a>
           </li>
           <li class="flags__item" data-flag="russia" tabindex="0">
-            <span aria-label="Россия" class="flags__link flags__link--russia"></span>
+            <a aria-label="Россия" class="flags__link flags__link--russia"></a>
           </li>
           <li class="flags__item" data-flag="belgium" tabindex="0">
-            <span aria-label="Бельгия" class="flags__link flags__link--belgium"></span>
+            <a aria-label="Бельгия" class="flags__link flags__link--belgium"></a>
           </li>
         </ul>
       </div>
